# Sentiment_Bot

./: .gitignore  README.md  pyproject.toml
configs/: data_sources.yaml  execution.yaml  mapping.yaml  risk.yaml  sentiment.yaml  universe.yaml
migrations/: 001_prediction_markets.sql  002_equity_bars.sql  003_options_snapshots.sql  004_options_features.sql  005_sentiment_docs.sql  006_sentiment_scored.sql  007_sentiment_features.sql  008_feature_bars.sql
scripts/: __init__.py  backfill.py  backfill_equity.py  backfill_options.py  backfill_sentiment.py  build_feature_matrix.py  build_options_features.py  build_pm_features.py  build_sentiment_features.py  fetch_yfinance_options.py  generate_reports.py  incremental_update.py  install_with_legacy_deps.sh  run_ablation.py  run_baselines.py  run_full_pipeline.py  score_sentiment.py
src/: __init__.py  db.py
src/agents/: __init__.py  ablation.py  analysis.py  baselines.py  eval.py  obs_mask_wrapper.py  train_sb3.py
src/connectors/: __init__.py
src/dashboard/: app.py
src/envs/: __init__.py  constraints.py  execution_sim.py  options_env.py  portfolio_constructor.py  reward.py
src/features/: __init__.py  align.py  options_features.py  pm_feature_builder.py  (+1 more)
tests/: conftest.py  test_ablation.py  test_align.py  test_analysis.py  test_baselines.py  test_connectors.py  test_db.py  test_equity.py  test_eval.py  test_features.py  test_generate_reports.py  test_kalshi.py  test_obs_mask_wrapper.py  test_options.py  test_options_env.py  test_options_features.py  test_polymarket.py  test_sentiment.py  test_sentiment_features.py  test_train_sb3.py
(+28 files in other folders)
